added theme-color metatag

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		
+		<meta name="description" content="Hello, my name is Trapez and I make mods for a game called Grand Theft Auto San Andreas. My main modding software in Blender 2.9!">
+		<meta name="theme-color" content="#005CF4">
+
 		<title>Trapez's Modding Shop</title>
 	</head>
 	<body>
